# spatt

./: AUTHORS  CMakeLists.txt  ChangeLog  FindTclap.cmake  INSTALL  Makefile.am  Makefile.in  README  README 2  README.md  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  spatt.spec  spatt.spec.in
arpack/: Makefile  Makefile.am  Makefile.in  second.f
blas/: Makefile  Makefile.am  Makefile.in
data/: 1000.fasta  GAL_up800.fasta  ab.fasta  ab.markov  ab100.fasta  ab1000.fasta  ab10000.fasta  ab_3seq.fasta  ab_m0.markov  ab_m1.markov  ab_m2.markov  abc_m1.markov  abc_m2.markov  binary_m0.markov  binary_m1.markov  binary_m2.markov  dna_m1.markov  ecoli_K12_sample.fasta  ecoli_m0.markov  ecoli_m1.markov  ecoli_m2.markov  ecoli_m3.markov  ecoli_m4.markov  h1n1.fasta  hiv_m0.markov  hiv_m1.markov  hiv_m5.markov  mgeni_m1.markov  mgeni_m5.markov  phage_lambda.fasta  prot_m0.markov  prot_m1.markov  prot_m2.markov  structural.markov  swissprot.markov  uniprot_sample.fasta
doc/: Makefile  Makefile.am  Makefile.in
doc/man/: Makefile  Makefile.am  Makefile.in  cpspatt.1  spatt.1
lapack/: Makefile  Makefile.am  Makefile.in
libspatt2/: CMakeLists.txt  alphabet.cc  alphabet.h  dfa.cc  dfa.h  gstat.cc  gstat.h  markov.cc  markov.h  nfa.cc  nfa.h  pmc.cc  pmc.h  sequence.cc  sequence.h  spattc.cc  spattc.h  stat.cc  stat.h  vmarkov.cc  vmarkov.h  xstat.cc  xstat.h  xwaiting.cc  xwaiting.h
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  alphabet.cc  alphabet.h  amarkov.cc  amarkov.h  aspatt.cc  cdf.c  cdf.h  count.cc  count.h  cp.cc  cp.h  cpspatt.cc  cpspattparameterparser.cc  cpspattparameterparser.h  cpspattparameters.cc  cpspattparameters.h  cpstat.cc  cpstat.h  fortran.cc  fortran.h  gspatt.cc  gspattparameterparser.cc  gspattparameterparser.h  gspattparameters.cc  gspattparameters.h  gstat.cc  gstat.h  input.cc  input.h  ldspatt.cc  ldspattparameterparser.cc  ldspattparameterparser.h  ldspattparameters.cc  ldspattparameters.h  ldstat.cc  ldstat.h  (+44 more)
src/.deps/: alphabet.Plo  amarkov.Po  aspatt.Po  cdf.Plo  count.Plo  cp.Plo  cpspatt.Po  cpspattparameterparser.Po  cpspattparameters.Po  cpstat.Po  fortran.Plo  gspatt.Po  gspattparameterparser.Po  gspattparameters.Po  gstat.Po  input.Plo  ldspatt.Po  ldspattparameterparser.Po  ldspattparameters.Po  ldstat.Po  markov.Plo  newxstat.Po  oldxspatt.Po  pattern.Plo  process.Plo  sequence.Plo  spattparameterparser.Plo  spattparameters.Plo  sspatt.Po  sspattparameterparser.Po  sspattparameters.Po  sstat.Plo  stat.Plo  transition.Po  word.Plo  x_PAppearFast.Po  x_PSucceed.Po  x_WordFam.Po  xspatt.Po  xspattparameterparser.Po  (+2 more)
tclap-1.0.5/: Makefile  Makefile.in  aclocal.m4  config.status  configure
tclap-1.0.5/docs/: Doxyfile  Makefile  Makefile.in
tclap-1.0.5/examples/: Makefile  Makefile.in
tclap-1.0.5/include/: Makefile  Makefile.in
tclap-1.0.5/include/tclap/: Arg.h  Makefile  Makefile.in
tclap-1.0.5/msc/: Makefile  Makefile.in
tclap-1.0.5/msc/examples/: Makefile  Makefile.in
tclap-1.0.5/tests/: Makefile  Makefile.in
tests/: Makefile  Makefile.am  Makefile.in  hiv.fasta  result_cpspatt  result_gspatt  result_ldspatt  result_sspatt  result_xspatt  test_cpspatt  test_cpspatt.in  test_gspatt  test_gspatt.in  test_ldspatt  test_ldspatt.in  test_sspatt  test_sspatt.in  test_xspatt  test_xspatt.in
