CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(spatt)

# For package detection files
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})

INCLUDE(CheckLibraryExists)
CHECK_LIBRARY_EXISTS(m pow "" HAVE_POW)
CHECK_LIBRARY_EXISTS(m sqrt "" HAVE_SQRT)

INCLUDE_DIRECTORIES(libspatt2)

ADD_DEFINITIONS(-O2)

ADD_SUBDIRECTORY(libspatt2)
ADD_SUBDIRECTORY(src)

