dnl $Id: configure.in 888 2006-09-26 15:45:19Z gnuel $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/sspatt.cc)
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE(spatt, 1.2.2)
AM_CONFIG_HEADER(config.h)
dnl AC_CONFIG_SUBDIRS(arprec)
AC_CONFIG_SUBDIRS(tclap-1.0.5)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_F77
AC_F77_LIBRARY_LDFLAGS

dnl Dirty workaround to correct wrong settings of FLIBS on Mac OS X.
case $host in
     *-apple-darwin* )
	   AC_MSG_NOTICE("Fixing wrong FLIBS settings on Mac OS X.")
	   FLIBS=`echo $FLIBS | sed 's/-lcrt2.o//'`
	   ;;
esac

dnl Automake doensn't seem to add the gfortran library automagically.
dnl Hence the kludge below
if test `basename $F77` == 'gfortran' ; then
	LDFLAGS="$LDFLAGS -lgfortran"
fi
	
AC_F77_DUMMY_MAIN
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL
dnl AC_PROG_RANLIB

AC_PATH_PROG(CHMOD,chmod)
AC_PATH_PROG(DIFF,diff)
AC_PATH_PROG(SH,sh)
AC_PATH_PROG(ECHO,echo)

dnl AC_PATH_PROG(GSLCONFIG,gsl-config)
dnl AC_PATH_PROG(DOXYGEN,doxygen)

CFLAGS="-O2"
CXXFLAGS="-O2"
FFLAGS="-O -ffloat-store"
AC_ARG_ENABLE(debug, [ --enable-debug    Debug Mode],
CXXFLAGS="-g" CFLAGS="-g" FFLAGS="-g")
AC_ARG_ENABLE(profiling, [ --enable-profiling    Profiling Mode],
CXXFLAGS="-pg" CFLAGS="-pg" FFLAGS="-pg" )
dnl AC_ARG_WITH(gsl-config, [ --with-gsl-config=PATH specify PATH to the gsl-config command], GSLCONFIG=$withval)
dnl Checks for libraries.

AC_CHECK_LIB(m, main)

dnl if test -z  "$GSLCONFIG"   ; then
dnl    AC_ERROR("No gsl found!")
dnl fi
 
dnl AC_CHECK_LIB(gslcblas, main)
dnl AC_CHECK_LIB(gsl, main)

AM_PATH_GSL
if test "$no_gsl" = "yes" ; then
	AC_MSG_ERROR("GSL library not found. Please check your configuration")
fi

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

AC_PROG_MAKE_SET

dnl Fix for incorrect FLAGS detection on Mac OS X

AC_CONFIG_FILES([Makefile spatt.spec src/Makefile arpack/Makefile lapack/Makefile blas/Makefile tests/Makefile tests/test_sspatt tests/test_ldspatt tests/test_xspatt tests/test_cpspatt tests/test_gspatt doc/Makefile doc/man/Makefile]) 

AC_CONFIG_COMMANDS(Chmodding,[chmod +x tests/test_*spatt])

AC_OUTPUT()
