noinst_LTLIBRARIES=libArpack.la

INCLUDES = -I@top_srcdir@/arpack/

libArpack_la_SOURCES = debug.h  stat.h  version.h cgetv0.f  cnaupd.f  csortc.f  dnaitr.f  dnaupe.f  dngets.f  dsaupd.f  dseupd.f  dstatn.f  slaqrb.f  snaupd.f  sneupd.f  ssaup2.f  ssesrt.f  ssortr.f  zgetv0.f  znaupd.f  zsortc.f cnaitr.f  cneigh.f  cstatn.f  dnapps.f  dnconv.f  dsaitr.f  dsconv.f  dsgets.f  dstats.f  snaitr.f  snaupe.f  sngets.f  ssaupd.f  sseupd.f  sstatn.f  znaitr.f  zneigh.f  zstatn.f cnapps.f  cneupd.f  dgetv0.f  dnaup2.f  dneigh.f  dsapps.f  dseigt.f  dsortc.f  dstqrb.f  snapps.f  snconv.f  ssaitr.f  ssconv.f  ssgets.f  sstats.f  znapps.f  zneupd.f cnaup2.f  cngets.f  dlaqrb.f  dnaupd.f  dneupd.f  dsaup2.f  dsesrt.f  dsortr.f  sgetv0.f  snaup2.f  sneigh.f  ssapps.f  sseigt.f  ssortc.f  sstqrb.f  znaup2.f  zngets.f cvout.f dmout.f dvout.f icnteq.f icopy.f iset.f iswap.f ivout.f second.f smout.f svout.f zmout.f zvout.f cmout.f
