noinst_LTLIBRARIES = libBlas.la 
#libBlas_a_SOURCES = zscal.f dscal.f zcopy.f dzasum.f zdscal.f ztrmv.f idamax.f zgerc.f izamax.f daxpy.f dnrm2.f dgemv.f zdotc.f zgemv.f dznrm2.f dcopy.f ztrsv.f dger.f zgemm.f drot.f zaxpy.f ddot.f ztrmm.f dcabs1.f 
INCLUDES = -I@top_srcdir@/blas/ 
libBlas_la_SOURCES = caxpy.f  cgbmv.f  cgeru.f   ctbsv.f  dasum.f   ddot.f   dger.f   dscal.f  dtbsv.f   dznrm2.f  izamax.f  scnrm2.f  sgemm.f  srot.f   ssymv.f  strsm.f  zdotu.f   zgemv.f  zswap.f  ztrsm.f ccopy.f  cgemm.f  cscal.f   ctrmm.f  daxpy.f   dgbmv.f  dnrm2.f  dswap.f  dtrmm.f   icamax.f  sasum.f   scopy.f   sgemv.f  srotg.f  ssyr2.f  zaxpy.f  zdscal.f  zgerc.f  ztbsv.f  ztrsv.f cdotc.f  cgemv.f  csscal.f  ctrsm.f  dcabs1.f  dgemm.f  drot.f   dsymv.f  dtrsm.f   idamax.f  saxpy.f   sdot.f    sger.f   sscal.f  stbsv.f  zcopy.f  zgbmv.f   zgeru.f  ztrmm.f cdotu.f  cgerc.f  cswap.f   ctrsv.f  dcopy.f   dgemv.f  drotg.f  dsyr2.f  dzasum.f  isamax.f  scasum.f  sgbmv.f   snrm2.f  sswap.f  strmm.f  zdotc.f  zgemm.f   zscal.f  ztrmv.f dlamch.f  xerbla.f dtrmv.f
